[project]
name = "pioneer_sdk"
version = "0.2.6"
description = "Programming tools for programming geoscan pioneer drone"
authors = [{name = "Geoscan", email = "info@geoscan.aero"},]
readme = "README.md"
keywords = ["mavlink", "pioneer", "geoscan"]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]

dependencies = [
    "future>=0.18.2",
    "lxml>=4.6.2",
    "numpy>=1.19.5",
    "opencv-contrib-python>=4.5.1.48",
    "PyYAML>=5.3.1",
    "pymavlink>=2.4.14"
    ]

[build-system]
requires = ["setuptools", "wheel"]
